# model-service

./: DESIGN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/model_service/: __init__.py  cli.py  config.py  contracts.py
src/model_service/eval/: runner.py
src/model_service/eval/datasets/: invalid_language.jsonl  invalid_version.jsonl  tiny.jsonl
src/model_service/model/: base.py  stub.py
src/model_service/observability/: logging.py
src/model_service/service/: adapters.py  http.py  pipeline.py
tests/: test_config.py  test_contracts.py  test_eval_runner.py  test_http_service.py  test_pipeline.py
